@@ -3,15 +3,21 @@ package stirling.software.proprietary.security.configuration.ee;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
+import org.springframework.boot.context.event.ApplicationReadyEvent;
+import org.springframework.context.annotation.Lazy;
+import org.springframework.context.event.EventListener;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
+
+import jakarta.annotation.PostConstruct;
 
 import lombok.extern.slf4j.Slf4j;
 
 import stirling.software.common.model.ApplicationProperties;
+import stirling.software.common.util.GeneralUtils;
 import stirling.software.proprietary.security.configuration.ee.KeygenLicenseVerifier.License;
+import stirling.software.proprietary.service.UserLicenseSettingsService;
 
 @Slf4j
 @Component
@@ -23,21 +29,46 @@ public class LicenseKeyChecker {
 
     private final ApplicationProperties applicationProperties;
 
-    private License premiumEnabledResult = License.NORMAL;
+    private final UserLicenseSettingsService licenseSettingsService;
+
+    // volatile: written by evaluateLicense() on the @Scheduled refresh thread, read by request
+    // threads via getPremiumLicenseEnabledResult() / requireProOrEnterprise(). Ensures readers see
+    // the latest tier rather than a stale cached value.
+    private volatile License premiumEnabledResult = License.NORMAL;
 
     public LicenseKeyChecker(
-            KeygenLicenseVerifier licenseService, ApplicationProperties applicationProperties) {
+            KeygenLicenseVerifier licenseService,
+            ApplicationProperties applicationProperties,
+            @Lazy UserLicenseSettingsService licenseSettingsService) {
         this.licenseService = licenseService;
         this.applicationProperties = applicationProperties;
-        this.checkLicense();
+        this.licenseSettingsService = licenseSettingsService;
+    }
+
+    @PostConstruct
+    public void init() {
+        evaluateLicense();
+    }
+
+    @EventListener(ApplicationReadyEvent.class)
+    public void onApplicationReady() {
+        synchronizeLicenseSettings();
     }
 
     @Scheduled(initialDelay = 604800000, fixedRate = 604800000) // 7 days in milliseconds
     public void checkLicensePeriodically() {
-        checkLicense();
+        try {
+            evaluateLicense();
+        } catch (RuntimeException e) {
+            log.error(
+                    "Periodic license check failed after all retries: {}. Keeping existing license"
+                            + " status.",
+                    e.getMessage());
+        }
+        synchronizeLicenseSettings();
     }
 
-    private void checkLicense() {
+    private void evaluateLicense() {
         if (!applicationProperties.getPremium().isEnabled()) {
             premiumEnabledResult = License.NORMAL;
         } else {
@@ -46,8 +77,8 @@ public class LicenseKeyChecker {
                 premiumEnabledResult = licenseService.verifyLicense(licenseKey);
                 if (License.ENTERPRISE == premiumEnabledResult) {
                     log.info("License key is Enterprise.");
-                } else if (License.PRO == premiumEnabledResult) {
-                    log.info("License key is Pro.");
+                } else if (License.SERVER == premiumEnabledResult) {
+                    log.info("License key is Server.");
                 } else {
                     log.info("License key is invalid, defaulting to non pro license.");
                 }
@@ -56,6 +87,10 @@ public class LicenseKeyChecker {
                 premiumEnabledResult = License.NORMAL;
             }
         }
+    }
+
+    private void synchronizeLicenseSettings() {
+        licenseSettingsService.updateLicenseMaxUsers();
     }
 
     private String getLicenseKeyContent(String keyOrFilePath) {
@@ -68,7 +103,7 @@ public class LicenseKeyChecker {
         if (keyOrFilePath.startsWith(FILE_PREFIX)) {
             String filePath = keyOrFilePath.substring(FILE_PREFIX.length());
             try {
-                Path path = Paths.get(filePath);
+                Path path = Path.of(filePath);
                 if (!Files.exists(path)) {
                     log.error("License file does not exist: {}", filePath);
                     return null;
@@ -85,7 +120,31 @@ public class LicenseKeyChecker {
         return keyOrFilePath;
     }
 
+    public void updateLicenseKey(String newKey) throws IOException {
+        applicationProperties.getPremium().setKey(newKey);
+        GeneralUtils.saveKeyToSettings("premium.key", newKey);
+        evaluateLicense();
+        synchronizeLicenseSettings();
+    }
+
+    public void resyncLicense() {
+        evaluateLicense();
+        synchronizeLicenseSettings();
+    }
+
     public License getPremiumLicenseEnabledResult() {
         return premiumEnabledResult;
+    }
+
+    /**
+     * Throws {@link IllegalStateException} if the current license is not Pro or Enterprise. Used by
+     * boot-time gates to fail fast when an operator enables a premium-only setting without a valid
+     * license. {@code configuredAs} is the human-readable property path (e.g. {@code
+     * "storage.provider=s3"}) and appears in the exception message.
+     */
+    public void requireProOrEnterprise(String configuredAs) {
+        if (premiumEnabledResult != License.SERVER && premiumEnabledResult != License.ENTERPRISE) {
+            throw new IllegalStateException(configuredAs + " requires a Pro or Enterprise license");
+        }
     }
 }
